--- a/todolist/todolist_app/templates/todolist_app/main.html
+++ b/todolist/todolist_app/templates/todolist_app/main.html
@@ -8,23 +8,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/navbarStyle.css' %}">
     <link rel="stylesheet" href="{% static 'css/jumbotronStyle.css' %}">
-    <link rel="stylesheet" href="{% static 'css/cardStyle.css' %}"
+    <link rel="stylesheet" href="{% static 'css/cardStyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mainStyle.css' %}">
     <title>To Do List</title>
 </head>
 
 <body>
     {% include 'todolist_app/navbar.html' %}
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container centering">
-            <h1 class="display-4 jumbotron-title">Do you often forget errands or tasks?</h1>
-            <p class="lead jumbotron-text">This website built using Django will definitely help you note down and check off important tasks.</p>
-        </div>
-    </div>
+    <br>
 
     {% block content %}
 
     {% endblock %}
+
+    <br>
+    
+    <footer class='py-2 fixed-bottom'>
+        <div class="row justify-content-center">
+            <div class="text-white-50 mr-2 ml-2">
+                <small>Copyright &copy; Vijaya Gajanan B</small>
+            </div>
+            <div class="mr-2 ml-2">
+                <small><a href="https://github.com/VijayaGB98" class="text-white" target="_blank">GitHub</a></small>
+            </div>
+        </div>
+        
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
