--- a/todolist/todolist_app/templates/todolist_app/tasklist.html
+++ b/todolist/todolist_app/templates/todolist_app/tasklist.html
@@ -3,6 +3,19 @@
 {% block content %}
 
 <div class="container">
+    <h3>Create new Task:</h3>
+    <hr>
+    <div class="row">
+        <div class="form-group">
+            <form action="{% url 'create' %}" method="POST" class="form-inline">
+                {% csrf_token %}
+                {{ form }}
+                <input type="submit" name="create" value="Create" class="btn btn-success">
+            </form>
+        </div>
+    </div>
+
+    <br>
 
     <h3>Incomplete Tasks:</h3>
     <hr>
@@ -10,19 +23,24 @@
     {% if incomplete_tasks %}
         <div class="container-fluid">
             {% for task in incomplete_tasks %}
-                <div class="card card-style shadow">
+                <div class="card card-style">
                     <div class="card-header {% if task.priority == 'High' %} card-high {% elif task.priority == 'Normal' %} card-normal {% else %} card-low {% endif %}">
-                        {{ task.priority }}
-                        <div class="buttons justify-content-between">
-                            <a href="" class="btn btn-small btn-success shadow">Completed Task</a>
-                            <a href="" class="btn btn-small btn-primary shadow">Update Task</a>
-                            <a href="" class="btn btn-small btn-danger shadow">Delete Task</a>
+                        <div class="row justify-content-between align-items-center">                        
+                            {{ task.priority }}
+                            <div class="buttons">
+                                    <form action="{% url 'edit' task.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <input type="submit" name="complete" class="btn btn-sm btn-success shadow" value="Complete Task">
+                                        <input type="submit" class="btn btn-sm btn-primary shadow" value="Update Task">
+                                        <input type="submit" name="delete" class="btn btn-sm btn-danger shadow" name="delete" value="Delete Task">
+                                    </form>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body justify-content-between">
+                    <div class="card-body card-text">
                         <h5>{{ task.task_name }}</h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body card-date">
                         <p>Task Created on: {{ task.date_created }}</p>
                     </div>
                 </div>
@@ -32,19 +50,29 @@
         <p>You finished all your incomplete tasks! Pat yourself on the back! :)</p>
     {% endif %}
 
+    <br>
+
     <h3>Completed Tasks:</h3>
     <hr>
     {% if completed_tasks %}
         <div class="container-fluid">
             {% for task in completed_tasks %}
             <div class="card card-style">
-                <div class="card-header">
-                    {{ task.priority }}
+                <div class="card-header {% if task.priority == 'High' %} card-high {% elif task.priority == 'Normal' %} card-normal {% else %} card-low {% endif %}">
+                    <div class="row justify-content-between align-items-center">
+                        {{ task.priority }}
+                        <div class="buttons">
+                            <form action="{% url 'edit' task.id %}" method="POST">
+                                {% csrf_token %}
+                                <input type="submit" name="delete" class="btn btn-sm btn-danger shadow" name="delete" value="Delete Task">
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
+                <div class="card-body card-text">
                     <h5>{{ task.task_name }}</h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body card-date">
                     <p>Task Completed on: {{ task.date_created }}</p>
                 </div>
             </div>
